grammar.js
    source_file: $ => seq(
      repeat($.import_decl),
      repeat($._top_decl),
    ),

    // v1.x-IMPORT: bare `import "path";` (no alias) is a
    // parse error. The grammar reflects that — `as IDENT`
    // is required.
    _top_decl: $ => choice(
      $.locus_decl,
      $.perspective_decl,
      $.type_decl,
      $.const_decl,
      $.function_decl,
      $.ffi_function_decl,
      $.interface_decl,
      $.topic_decl,
      $.ring_layout_decl,
      $.module_decl,
      $.effect_decl,
      $.target_decl,
      $.group_decl,
      $.domain_decl,
      // #392 thread 2: a TOP-LEVEL claims block — the library
      // tier. A seed swears about itself and its own boundary;
      // the block travels with the import. The typechecker
      // rejects the form in a seed that declares `main locus`.
      $.claims_block,
    ),

    // FUv0.8.2 #7: `target <name> { cap.path, ... }` — names a
    // substrate + its capability profile. Contextual, like `topic`.
    // (Was a known gap; closed in the #382 sync.)
    module_decl: $ => seq(
      'module',
      field('name', $.identifier),
      '{',
      repeat($._top_decl),
      '}',
    ),

    interface_method_sig: $ => seq(
      'fn',
      field('name', $.identifier),
      '(',
      optional($._param_list),
      ')',
      optional(seq('->', field('return_type', $._type_expr))),
      ';',
    ),

    locus_decl: $ => seq(
      // F.32-2 v0.2 (2026-05-25): `@form(...)` and
      // `@locality(...)` may both decorate the same locus,
      // in either order; each may appear at most once. Real
      // arity is enforced by the host typechecker; the
      // grammar accepts the looser shape.
      repeat($._locus_decorator),
      optional('main'),
      'locus',
      field('name', $.identifier),
      optional($.generic_params),
      optional($.locus_annotations),
      '{',
      repeat($._locus_member),
      '}',
    ),

    _locus_decorator: $ => choice(
      $.form_annotation,
      $.locality_annotation,
      $.export_annotation,
      // Effect contracts that sit on a LOCUS rather than a fn:
      // `@effects(depends: …)` (#330) is locus-level by design —
      // dependence enters through subscriptions, which are declared
      // per-locus — and `@phase_effects` / `@supervised` have always
      // been locus-level.
      $.effects_annotation,
      $.phase_effects_annotation,
      $.supervised_annotation,
    ),

    locus_annotations: $ => seq(
      ':',
      $._locus_header_item,
      repeat(seq(',', $._locus_header_item)),
    ),

    // Perspectives Phase 2a (2026-06): the post-`:` list may
    // carry `serves P` conformance clauses intermixed with the
    // annotations — `locus RouterV1 : serves Router, tier 2 { }`.
    // `serves` is a contextual ident recognized only here. Hidden
    // grouping rule so annotations stay direct children of
    // `locus_annotations`; `serves` gets its own named node.
    _locus_header_item: $ => choice(
      $.locus_annotation,
      $.serves_clause,
    ),

    serves_clause: $ => seq('serves', field('perspective', $.identifier)),

    _locus_member: $ => choice(
      $.params_block,
      $.contract_block,
      $.bus_block,
      $.capacity_block,
      $.lifecycle_decl,
      $.mode_decl,
      $.failure_decl,
      $.closure_decl,
      $.function_decl,
      $.const_decl,
      $.type_decl,
      $.bindings_block,
      $.placement_block,
      $.topology_block,
      $.claims_block,
      $.birth_check_decl,
    ),

    // GH #382: the `claims { }` main-locus member — named
    // bundle-level sentences. The typechecker enforces main-only;
    // all introducers are contextual.
    bindings_block: $ => seq(
      'bindings',
      '{',
      repeat($.binding_entry),
      '}',
    ),

    binding_entry: $ => seq(
      field('topic', $.identifier),
      ':',
      $._transport_spec,
      optional($.binding_where),
      ';',
    ),

    _transport_spec: $ => choice(
      $.unix_transport,
      $.shm_ring_transport,
      $.adapter_transport,
    ),

    unix_transport: $ => seq(
      'unix',
      '(',
      $.string_literal,
      repeat(seq(',', $.unix_kwarg)),
      ')',
    ),

    unix_kwarg: $ => seq('role', ':', choice('listen', 'connect')),

    adapter_transport: $ => seq(
      field('locus_name', $.identifier),
      '{',
      optional(seq(
        $.struct_init,
        repeat(seq(',', $.struct_init)),
        optional(','),
      )),
      '}',
    ),

    params_block: $ => seq(
      'params',
      '{',
      repeat($.param_decl),
      '}',
    ),

    param_decl: $ => seq(
      field('name', $.identifier),
      optional(seq(':', field('type', $._type_expr))),
      choice(
        seq('=', field('default', $._expression), ';'),
        seq(':', 'inferred', ';'),
        ';',   // required-shape: name: T;
      ),
    ),

    // ===========================================================
    // § 4. Contract block
    // ===========================================================

    contract_block: $ => seq(
      'contract',
      choice(
        seq(':', 'inferred', ';'),
        seq('{', repeat($.contract_member), '}'),
      ),
    ),

    contract_member: $ => seq(
      choice('expose', 'consume'),
      choice(
        seq(field('name', $.identifier), ':', field('type', $._type_expr), ';'),
        seq('inferred', ';'),
      ),
    ),

    // ===========================================================
    // § 5. Bus block
    // ===========================================================

    bus_block: $ => seq(
      'bus',
      '{',
      repeat($._bus_member),
      '}',
    ),

    _bus_member: $ => choice($.bus_subscribe, $.bus_publish),

    bus_subscribe: $ => seq(
      'subscribe',
      field('subject', $._bus_subject),
      'as',
      field('handler', $.identifier),
      optional(seq('of', 'type', field('type', $._type_expr))),
      optional($.bounded_clause),
      ';',
    ),

    bus_publish: $ => seq(
      'publish',
      field('subject', $._bus_subject),
      optional(seq('of', 'type', field('type', $._type_expr))),
      optional(seq('as', field('alias', $.identifier))),
      ';',
    ),

    _bus_subject: $ => choice($.string_literal, $.qualified_name),

    // ===========================================================
    // § 5b. Capacity block (F.22)
    // ===========================================================

    lifecycle_decl: $ => seq(
      optional($.unbounded_annotation),
      field('kind', $._lifecycle_keyword),
      optional(seq('(', optional($._param_list), ')')),
      optional(seq('->', field('return_type', $._type_expr))),
      $.block,
    ),

    _lifecycle_keyword: $ => choice(
      'birth',
      'accept',
      'run',
      'drain',
      'dissolve',
    ),

    // ===========================================================
    // § 7. Mode declarations
    // ===========================================================

    perspective_decl: $ => seq(
      'perspective',
      field('name', $.identifier),
      optional($.generic_params),
      '{',
      repeat($._perspective_member),
      '}',
    ),

    _perspective_member: $ => choice(
      $.params_block,
      seq('stable_when', $.block),
      seq('serialize_as', $._type_expr, ';'),
      // The perspective CONTRACT: bodyless method signatures (the
      // stable ABI a holder programs against, like an interface),
      // plus optional default-bodied methods and a bus surface
      // (Phase 2c bus contract).
      $.interface_method_sig,
      $.function_decl,
      $.bus_block,
    ),

    // ===========================================================
    // § 11. Type declarations
    // ===========================================================

    type_decl: $ => choice(
      // type T = type_expr;
      seq('type', field('name', $.identifier), optional($.generic_params),
          '=', field('aliased', $._type_expr), ';'),
      // type T { field: Type; ... }  (struct)
      seq('type', field('name', $.identifier), optional($.generic_params),
          '{', repeat($.struct_field), '}'),
      // type T = enum { A, B(int), ... };
      seq('type', field('name', $.identifier), optional($.generic_params),
          '=', 'enum', '{',
          $.enum_variant, repeat(seq(',', $.enum_variant)), '}', ';'),
    ),

    _type_expr: $ => choice(
      $.primitive_type,
      $.named_type,
      $.projection_type,
      $.perspective_type,
      $.array_type,
      $.tuple_type,
      $.function_type,
      $.unit_type,
      seq('(', $._type_expr, ')'),
    ),

    // `()` — the unit type. Per spec/types.md: "If a fn omits
    // `-> T`, the return type defaults to `()`. Explicit `-> T`
    // is required for any non-unit return." Some stdlib fns
    // spell `-> ()` explicitly when paired with `fallible(E)`
    // so the fallible-success-type is unambiguous.
    primitive_type: $ => choice(
      'Int', 'Uint', 'Float', 'Decimal', 'String', 'Bool',
      'Time', 'Duration', 'Bytes',
      'BytesView', 'StringView',
    ),

    named_type: $ => seq($.qualified_name, optional($.generic_args)),

    perspective_type: $ => seq(
      'perspective',
      '(',
      field('contract', $.identifier),
      ')',
    ),

    qualified_name: $ => seq(
      $.identifier,
      repeat(seq('::', $.identifier)),
    ),

    // ===========================================================
    // § 13. Const and function decls
    // ===========================================================

    const_decl: $ => seq(
      'const',
      field('name', $.identifier),
      ':',
      field('type', $._type_expr),
      '=',
      field('value', $._expression),
      ';',
    ),

    function_decl: $ => seq(
      optional($.fn_decorators),
      'fn',
      field('name', $.identifier),
      optional($.generic_params),
      '(',
      optional($._param_list),
      ')',
      optional(seq('->', field('return_type', $._type_expr))),
      optional($.fallible_marker),
      $.block,
    ),

    // @ffi("c") fn name(params) -> ret ;
    fn_decorators: $ => repeat1(choice(
      $.export_annotation,
      $.unbounded_annotation,
      $.budget_annotation,
      $.hot_annotation,
      $.effects_annotation,
      $.no_effect_annotation,
      $.no_panic_annotation,
      $.deterministic_annotation,
    )),

    // #265 / #345: `@effects(<clause>: {A, B})`. Clause names are
    // bare idents rather than a fixed choice — `none` / `publish` /
    // `causes` / `depends` / `is` today, and the compiler owns which
    // are legal. Class names include user-declared ones, so the set
    // members cannot be an enumerated keyword list either.
    _param_list: $ => seq(
      $.parameter,
      repeat(seq(',', $.parameter)),
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $._type_expr),
      optional(seq('=', field('default', $._expression))),
    ),

    // ===========================================================
    // § 14. Statements + blocks
    // ===========================================================

    block: $ => seq(
      '{',
      repeat($._statement),
      optional($._expression),     // trailing expression (Phase 2b)
      '}',
    ),

    _statement: $ => choice(
      $.let_stmt,
      $.assign_stmt,
      $.send_stmt,
      $.if_stmt,
      $.match_stmt,
      $.for_stmt,
      $.while_stmt,
      $.return_stmt,
      $.break_stmt,
      $.continue_stmt,
      $.yield_stmt,
      $.terminate_stmt,
      $.reperspective_stmt,
      $.recovery_stmt,
      $.violate_stmt,
      $.fail_stmt,
      $.block,
      $.expr_stmt,
    ),

    // 2026-05-30 per-child terminate: ends this locus's own
    // lifecycle from within a handler/run body.
    reperspective_stmt: $ => seq(
      'reperspective',
      'self',
      '.',
      field('slot', $.identifier),
      'as',
      field('impl', $.identifier),
      ';',
    ),

    let_stmt: $ => seq(
      'let',
      optional('mut'),
      field('name', $.identifier),
      optional(seq(':', field('type', $._type_expr))),
      '=',
      field('value', $._expression),
      ';',
    ),

    return_stmt: $ => seq('return', optional($._expression), ';'),

    _expression: $ => choice(
      $.or_disposition_expr,
      $.range_expr,
      $.binary_expr,
      $.unary_expr,
      $.call_expr,
      $.field_expr,
      $.index_expr,
      $.path_expr,
      $.struct_literal,
      // locus instantiation is syntactically identical to a
      // struct literal — both lower to `Name { field: val, ... }`.
      // The distinction is semantic (does Name resolve to a
      // locus or a type?), not syntactic. Consumers
      // (lotus_viz, semantic-analyzer) make the call at
      // tree-walk time.
      $.tuple_expr,
      $.array_expr,
      $.if_expr,
      // match-as-expression deferred — match_stmt overlaps and
      // tree-sitter can't disambiguate without lookahead help.
      // Add via a distinct match_expr rule (or scanner.c) when
      // a real workload needs it.
      $.sum_expr,
      $.prod_expr,
      $.parenthesized,
      $.self_expr,
      $.identifier,
      $._literal,
    ),

    parenthesized: $ => seq('(', $._expression, ')'),

    self_expr: $ => 'self',

    // Range — used inside index brackets for slicing, e.g.
    // `s[from..total]`. Per spec/precedence.md range is level 1
    // non-assoc; we use prec.left for tree-sitter happiness
    // since GLR doesn't need explicit non-assoc enforcement at
    // this level. Half-open ranges (`..end` / `start..`) are
    // not in stdlib usage today; add them when a workload
    // surfaces the need.
    range_expr: $ => prec.left(1, seq(
      field('start', $._expression),
      field('op', choice('..', '..=')),
      field('end', $._expression),
    )),

    or_disposition_expr: $ => prec.right(PREC.OR_DISP, seq(
      field('expr', $._expression),
      'or',
      field('disposition', choice(
        $.raise_disposition,
        $.discard_disposition,
        $.fail_disposition,
        $._expression,
      )),
    )),

    binary_expr: $ => {
      const table = [
        [PREC.OR,      '||'],
        [PREC.AND,     '&&'],
        [PREC.EQ,      '=='],
        [PREC.EQ,      '!='],
        [PREC.CMP,     '<'],
        [PREC.CMP,     '>'],
        [PREC.CMP,     '<='],
        [PREC.CMP,     '>='],
        [PREC.BIT_OR,  '|'],
        [PREC.BIT_XOR, '^'],
        [PREC.BIT_AND, '&'],
        [PREC.SHIFT,   '<<'],
        [PREC.SHIFT,   '>>'],
        [PREC.ADD,     '+'],
        [PREC.ADD,     '-'],
        [PREC.MUL,     '*'],
        [PREC.MUL,     '/'],
        [PREC.MUL,     '%'],
      ];
      return choice(...table.map(([p, op]) =>
        prec.left(p, seq(
          field('left', $._expression),
          field('op', op),
          field('right', $._expression),
        )),
      ));
    },

    unary_expr: $ => prec.right(PREC.UNARY, seq(
      field('op', choice('-', '!', '~')),
      field('operand', $._expression),
    )),

    call_expr: $ => prec(PREC.CALL, seq(
      field('callee', $._expression),
      '(',
      optional($._argument_list),
      ')',
    )),

    field_expr: $ => prec(PREC.CALL, seq(
      field('object', $._expression),
      '.',
      field('member', $._member_name),
    )),

    path_expr: $ => prec(PREC.CALL, seq(
      field('object', $._expression),
      '::',
      field('member', $._member_name),
    )),

    // member_name admits framework-vocabulary keywords post-dot.
    _member_name: $ => choice(
      $.identifier,
      'bulk', 'harmonic', 'resolution',
      'closure', 'locus', 'params', 'contract',
      'bus', 'capacity', 'tier', 'projection',
      'perspective', 'type',
    ),

    _argument_list: $ => seq(
      $._expression,
      repeat(seq(',', $._expression)),
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,
